Product-Card bugs corrigidos

--- a/Product-Card/index.html
+++ b/Product-Card/index.html
@@ -24,7 +24,7 @@
         />
         <img
           src="images/image-product-mobile.jpg"
-          alt="Photo of a bottle of Y Eau de Toilette"
+          alt="Photo Gabrielle Essence Eau De Parfum"
         />
       </picture>
 
